<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signin.signin.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/one_dp"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toTopOf="@+id/cardView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/ten_dp"
            android:paddingHorizontal="20dp"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="@dimen/twenty_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/three_dp"
                android:paddingStart="@dimen/forty_dp"
                android:paddingEnd="@dimen/forty_dp">

                <TextView
                    android:id="@+id/tvSignInLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twenty_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/one_dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignInLabel" />

                <View
                    android:id="@+id/viewDivider1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/two_dp"
                    android:background="@color/color_primary"
                    app:layout_constraintEnd_toEndOf="@+id/tvSignInLabel"
                    app:layout_constraintStart_toStartOf="@+id/tvSignInLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignInLabel" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilMerchantEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_seven_dp"
                    android:nextFocusDown="@id/tilMerchantPassword"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewDivider1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietMerchantEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/email_length"
                        android:maxLines="@integer/one_line" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilMerchantPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilMerchantEmail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietMerchantPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="@integer/password_length"
                        android:maxLines="@integer/one_line" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/blue_dark"
                    android:fontFamily="@font/poppins_medium"
                    android:stateListAnimator="@null"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

                <TextView
                    android:id="@+id/tvMerchantForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/forget_password"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/twelve_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilMerchantPassword" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="2dp"
                    android:background="@color/text_gray_2"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                    app:layout_constraintEnd_toStartOf="@id/tvOr"
                    app:layout_constraintTop_toTopOf="@+id/tvOr"
                    app:layout_constraintVertical_bias="0.555" />

                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/or"
                    android:visibility="visible"
                    android:textColor="@color/text_gray_2"
                    app:layout_constraintEnd_toEndOf="@+id/tvMerchantForgotPassword"
                    app:layout_constraintStart_toStartOf="@+id/tvMerchantForgotPassword"
                    app:layout_constraintTop_toBottomOf="@id/tvMerchantForgotPassword" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/text_gray_2"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.01"
                    app:layout_constraintStart_toEndOf="@id/tvOr"
                    app:layout_constraintTop_toTopOf="@+id/tvOr" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue_light_4"
                    android:textSize="@dimen/twelve_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <!-- <ImageView
             android:id="@+id/ivBackground"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="@string/app_name"
             android:scaleType="fitXY"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>